--- a/medication-reminder-india/requirements.txt
+++ b/medication-reminder-india/requirements.txt
@@ -5,7 +5,9 @@ psycopg2-binary
 python-dotenv
 pydantic
 passlib[bcrypt]
+bcrypt==4.0.1
 python-jose
+python-multipart
 pandas
 scikit-learn
 joblib
